-- RYP / Renewal Year Premium database design draft
-- Target ownership: ms-after, proposed schema: asa_after
-- Status: PRE-DESIGN / NOT FOR PRODUCTION EXECUTION

CREATE SCHEMA IF NOT EXISTS asa_after;

CREATE TABLE IF NOT EXISTS asa_after.ryp_payment_history (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    agent_id            VARCHAR(10) NOT NULL,
    sales_id            VARCHAR(10) NOT NULL,
    branch_code         VARCHAR(10) NOT NULL,
    policy_no           VARCHAR(10) NOT NULL,
    policy_type         VARCHAR(10) NOT NULL,
    plan_code           VARCHAR(10) NOT NULL,
    plan_name           VARCHAR(200) NOT NULL,
    sum_amount          NUMERIC(12,2) NOT NULL CHECK (sum_amount >= 0),
    payment_mode        VARCHAR(2),
    total_premium       NUMERIC(12,2) CHECK (total_premium >= 0),
    pay_year            VARCHAR(4),
    endowment_year      VARCHAR(4),
    effective_date      TIMESTAMPTZ,
    due_date            TIMESTAMPTZ,
    grace_end_date      TIMESTAMPTZ,
    meta_data           JSONB,
    customer_full_name  VARCHAR(150),
    customer_age        INTEGER CHECK (customer_age IS NULL OR customer_age >= 0),
    customer_gender     VARCHAR(2),
    customer_mobile_no  VARCHAR(20),
    customer_email      VARCHAR(150),
    customer_address    TEXT,
    payment_status      VARCHAR(5) NOT NULL DEFAULT 'R',
    payment_type        VARCHAR(5),
    payment_type_desc   VARCHAR(100),
    pay_date            TIMESTAMPTZ,
    collection_id       VARCHAR(20),
    trx_id              VARCHAR(50),
    reference1          VARCHAR(20),
    reference2          VARCHAR(20),
    reference3          VARCHAR(20),
    record_version      BIGINT NOT NULL DEFAULT 0,
    delete_time         TIMESTAMPTZ,
    create_time         TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    create_user_code    VARCHAR(100) NOT NULL,
    last_update         TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    update_user_code    VARCHAR(100) NOT NULL,
    CONSTRAINT ck_ryp_history_policy_type
        CHECK (policy_type IN ('O', 'U', 'I')),
    CONSTRAINT ck_ryp_history_payment_status
        CHECK (payment_status IN ('R', 'P', 'W', 'S', 'F', 'E', 'C', 'X', 'D')),
    CONSTRAINT ck_ryp_history_payment_type
        CHECK (payment_type IS NULL OR payment_type IN ('01', '02', '03'))
);

CREATE UNIQUE INDEX IF NOT EXISTS ux_ryp_history_policy_collection_type
    ON asa_after.ryp_payment_history (policy_no, collection_id, payment_type)
    WHERE delete_time IS NULL AND collection_id IS NOT NULL;

CREATE INDEX IF NOT EXISTS ix_ryp_history_agent_due
    ON asa_after.ryp_payment_history (agent_id, due_date)
    WHERE delete_time IS NULL;

CREATE INDEX IF NOT EXISTS ix_ryp_history_agent_status_update
    ON asa_after.ryp_payment_history (agent_id, payment_status, last_update DESC)
    WHERE delete_time IS NULL;

CREATE INDEX IF NOT EXISTS ix_ryp_history_search_policy
    ON asa_after.ryp_payment_history (policy_no);

CREATE TABLE IF NOT EXISTS asa_after.ryp_payment_transaction (
    id                      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ryp_payment_history_id  BIGINT NOT NULL,
    policy_no               VARCHAR(10) NOT NULL,
    collection_id           VARCHAR(20),
    terminal_id             VARCHAR(20),
    trx_id                  VARCHAR(50),
    transaction_uuid        UUID NOT NULL,
    idempotency_key         VARCHAR(100),
    reference1              VARCHAR(20),
    reference2              VARCHAR(20),
    reference3              VARCHAR(20),
    total_amount            NUMERIC(12,2) NOT NULL CHECK (total_amount >= 0),
    response_code           VARCHAR(20),
    transaction_status      VARCHAR(5) NOT NULL DEFAULT 'P',
    payment_type            VARCHAR(5) NOT NULL,
    payment_type_desc       VARCHAR(100),
    payment_code            VARCHAR(3) NOT NULL DEFAULT 'RYP',
    pay_date                TIMESTAMPTZ,
    qr_code_object_key      VARCHAR(2048),
    qr_create_date          TIMESTAMPTZ,
    qr_expire_date          TIMESTAMPTZ,
    merchant_id             VARCHAR(50),
    customer_id             VARCHAR(50),
    charge_id               VARCHAR(50),
    credit_card_no_masked   VARCHAR(50),
    credit_card_token_ref   VARCHAR(300),
    slip_file_object_key    VARCHAR(2048),
    receipt_no              VARCHAR(50),
    module_type             VARCHAR(20) NOT NULL DEFAULT 'AFTER',
    gateway_last_inquiry_at TIMESTAMPTZ,
    record_version          BIGINT NOT NULL DEFAULT 0,
    create_time             TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    create_user_code        VARCHAR(100) NOT NULL,
    last_update             TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    update_user_code        VARCHAR(100) NOT NULL,
    CONSTRAINT fk_ryp_transaction_history
        FOREIGN KEY (ryp_payment_history_id)
        REFERENCES asa_after.ryp_payment_history(id),
    CONSTRAINT ux_ryp_transaction_uuid UNIQUE (transaction_uuid),
    CONSTRAINT ux_ryp_transaction_idempotency UNIQUE (idempotency_key),
    CONSTRAINT ck_ryp_transaction_status
        CHECK (transaction_status IN ('P', 'W', 'S', 'F', 'E', 'C', 'X', 'D')),
    CONSTRAINT ck_ryp_transaction_payment_type
        CHECK (payment_type IN ('01', '02', '03')),
    CONSTRAINT ck_ryp_transaction_payment_code
        CHECK (payment_code = 'RYP'),
    CONSTRAINT ck_ryp_transaction_module
        CHECK (module_type = 'AFTER'),
    CONSTRAINT ck_ryp_transaction_qr_window
        CHECK (qr_expire_date IS NULL OR qr_create_date IS NULL OR qr_expire_date > qr_create_date)
);

CREATE INDEX IF NOT EXISTS ix_ryp_transaction_history_update
    ON asa_after.ryp_payment_transaction (ryp_payment_history_id, last_update DESC);

CREATE INDEX IF NOT EXISTS ix_ryp_transaction_policy_status
    ON asa_after.ryp_payment_transaction (policy_no, transaction_status, last_update DESC);

CREATE INDEX IF NOT EXISTS ix_ryp_transaction_collection_reference
    ON asa_after.ryp_payment_transaction (collection_id, reference1);

-- Prevent more than one active payment attempt for the same policy/collection.
CREATE UNIQUE INDEX IF NOT EXISTS ux_ryp_transaction_active_attempt
    ON asa_after.ryp_payment_transaction (policy_no, collection_id)
    WHERE transaction_status IN ('P', 'W');

CREATE TABLE IF NOT EXISTS asa_after.ryp_payment_detail (
    id                          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ryp_payment_transaction_id  BIGINT NOT NULL,
    pay_period                  VARCHAR(4) NOT NULL,
    sequence                    INTEGER NOT NULL CHECK (sequence > 0),
    life_premium                NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (life_premium >= 0),
    rider_premium               NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (rider_premium >= 0),
    rsp_premium                 NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (rsp_premium >= 0),
    extra_premium               NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (extra_premium >= 0),
    topup_premium               NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (topup_premium >= 0),
    apl_amount                  NUMERIC(12,2) NOT NULL DEFAULT 0 CHECK (apl_amount >= 0),
    total_premium               NUMERIC(12,2) NOT NULL CHECK (total_premium >= 0),
    create_time                 TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    create_user_code            VARCHAR(100) NOT NULL,
    last_update                 TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    update_user_code            VARCHAR(100) NOT NULL,
    CONSTRAINT fk_ryp_detail_transaction
        FOREIGN KEY (ryp_payment_transaction_id)
        REFERENCES asa_after.ryp_payment_transaction(id)
        ON DELETE RESTRICT,
    CONSTRAINT ux_ryp_detail_transaction UNIQUE (ryp_payment_transaction_id),
    CONSTRAINT ux_ryp_detail_period_sequence
        UNIQUE (ryp_payment_transaction_id, pay_period, sequence),
    CONSTRAINT ck_ryp_detail_total
        CHECK (total_premium = life_premium + rider_premium + rsp_premium
                             + extra_premium + topup_premium + apl_amount)
);

COMMENT ON COLUMN asa_after.ryp_payment_transaction.credit_card_token_ref IS
    'Reference only. Do not store raw PAN, CVV, bearer token, or gateway secret.';

COMMENT ON COLUMN asa_after.ryp_payment_transaction.qr_code_object_key IS
    'Object-storage key is preferred over persisting QR base64 in the database.';
